# cli-profgent

./: AGENTS.md  ARCHITECTURE.md  README.md  academic_management.db  alembic.ini  bolt.md  init_db.py  inspect_ctk.py  main.py  pyproject.toml  reproduce_issue.py
app/core/: __init__.py  config.py
app/core/llm/: base.py  maritaca_provider.py  ollama_provider.py  open_router_provider.py  openai_provider.py
app/core/security/: credentials.py
app/core/tools/: tool_decorator.py  tool_executor.py  tool_registry.py
app/data/: bncc_infantil.json  database.py  migrations.py
app/models/: __init__.py  assessment.py  attendance.py  base.py  class_.py  class_enrollment.py  class_subject.py  course.py  grade.py  incident.py  lesson.py  schedule.py  seating_chart.py  student.py
app/services/: __init__.py  assistant_service.py  bncc_service.py  data_service.py  legacy_ai_importer.py  report_service.py
app/services/data/: base_service.py  course_service.py  dashboard_service.py  enrollment_service.py  grade_service.py  incident_service.py  lesson_service.py  schedule_service.py  seating_chart_service.py  student_service.py
app/tools/: __init__.py  analysis_tools.py  database_tools.py  internet_tools.py  pedagogical_tools.py  report_tools.py
app/tui/: app.py  chat_screen.py  management_screens.py
app/ui/: __init__.py  main_app.py  ui_utils.py
app/ui/views/: __init__.py  add_dialog.py  assistant_view.py  attendance_dialog.py  base_dialog.py  bncc_selection_dialog.py  class_detail_view.py  class_selection_view.py  copy_class_dialog.py  copy_lesson_dialog.py  dashboard_view.py  edit_dialog.py  lesson_dialog.py  (+5 more)
app/utils/: __init__.py  async_utils.py  charts.py  format_utils.py  import_utils.py  name_parser.py  path_utils.py  student_csv_parser.py
docs/: GUIA_DE_COMPILACAO.md  GUIA_RAPIDO.md  MANUAL_DO_USUARIO.md
scripts/: build_executable.py
scripts/installers/: create_dmg.sh  linux_setup.sh  windows_setup.iss
tests/: conftest.py  test_attendance.py  test_bncc_course_update.py  test_bncc_service.py  test_course_deletion.py  test_dialog_zorder.py  test_domain_validation.py  test_llm_base_conversion.py  test_new_models.py  test_path_utils.py  test_report_service.py  test_report_tools.py  test_reproduction.py  test_schedule.py
tests/services/: __init__.py  test_csv_importer.py  test_data_service.py  test_data_service_add_birthdate.py  test_data_service_update_birthdate.py  test_enrollment_service_tui.py  test_import_bug.py  test_lesson_copy.py  test_new_data_service_methods.py
tests/tools/: __init__.py  test_database_tools.py  test_new_tools.py
tests/utils/: test_format_utils.py  test_student_csv_parser.py
(+2 files in other folders)
